# latent-reasoning

./: README.md  citations.xlsx
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/: .gitignore  README.md  accelerate_config.yaml  environment.yml  evaluate_model.py  llm-eval-template.ipynb  llm_eval.ipynb  llm_eval.py  llm_eval_configs.py  llm_ft.py  main.py  pyproject.toml  run_eval.sh  run_ft.sh
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/llama2-7b/: test_long.json  test_short.json
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/llama3.1-70b/: outputs_chain_nums1.json  outputs_chain_nums2.json  outputs_chain_nums3.json  outputs_chain_nums4.json  test_long.json  test_short.json
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/llama3.1-8b/: outputs_chain_nums1.json  outputs_chain_nums2.json  outputs_chain_nums3.json  outputs_chain_nums4.json  test_long.json  test_short.json
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/olmo/: outputs_chain_nums1.json  test_long.json  test_short.json
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/qwen2.5/: outputs_chain_nums1.json  outputs_chain_nums2.json  outputs_chain_nums3.json  outputs_chain_nums4.json  test_long.json  test_short.json
mechanical interpretability/layer stacks influence Latent CoT/two-hop reasoning/scripts/: analyze-3-layer-tf.sh  train-3-layer-tf.sh
(+19322 files in other folders)
