[project]
name = "twohopic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "deepspeed>=0.16.7",
    "nvitop>=1.5.0",
    "peft>=0.15.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "vllm>=0.8.5.post1",
    "wandb>=0.19.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
